--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 4rem; /* Add padding to avoid overlap with nav bar */
   }
 
   .Todo {
